# kot

./: .dockerignore  .flake8  .git-pr-release  .gitignore  .isort.cfg  .tagpr  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  build.sh  compose.yml  config.py.example  config.yaml.example  console.sh  docker-compose.yml  lambda_prepare.sh  mypy.ini  myrecoder-py.sh  myrecoder.sh  myrecorder-py.sh  myrecorder.sh  notify.sh  pull.sh  push.sh  pyproject.toml  requirements.txt  run.py  scrapekot.sh  tasks.py
.github/workflows/: dockerimage.yml  dockerlint.yml  pr-release.yml  pythonapp.yml  tagpr.yml
deploy_package/: .dockerignore  Dockerfile  lambda_build.sh
docker/kot/: .dockerignore  Dockerfile
docker/lambda/: .dockerignore  Dockerfile
docs/: migration-guide-for-v3.1.0.md
kot/: __main__.py  aggregate.py  crawl.py  notify.py  punch.py  scrape.py  service.py
kot/common/: config.py  crawl.py  logger.py  notify.py
kot/myrecorder/: __init__.py  crawl.py  notify.py
kot/scrapekot/: __init__.py  aggregate.py  crawl.py  notify.py  scrape.py
my_recorder/: const.py  crawler.py  run.py
py/: const.py  crawler.py  notifyer.py  scraper.py
py/tests/: test_scraper.py
py/utils/: download_chromedriver.py  killall_chromedriver.py  lambda_prepare.py
scripts/: myrecorder.sh  scrapekot.sh
scripts/docker/kot/: build.sh  pull.sh  push.sh
scripts/docker/lambda/: .env.example  build.sh  push.sh
shell/: build.sh  myrecorder-py.sh  pull.sh  push.sh
tests/: test_aggregate.py  test_config.py  test_notify.py  test_scrape.py
tests/common/: test_config.py
tests/myrecorder/: test_notify.py
tests/scrapekot/: test_aggregate.py  test_notify.py  test_scrape.py
