[tool.poetry]
name = "kot"
version = "0.1.0"
description = ""
authors = ["takaiyuk"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.11.1"
click = "8.1.3"
selenium = "4.3.0"
requests = "2.28.0"
typer = "0.4.1"
webdriver-manager = "3.7.0"
PyYAML = "6.0"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
pydeps = "^1.10.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
