[tool.poetry]
name = "kot"
version = "0.1.0"
description = ""
authors = ["takaiyuk"]

[tool.poetry.dependencies]
python = "~3.9"
beautifulsoup4 = "4.11.1"
click = "8.1.3"
selenium = "4.3.0"
requests = "2.28.0"
typer = "0.4.1"
webdriver-manager = "3.7.0"
PyYAML = "6.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
pydeps = "^1.10.22"

[tool.black]
line-length = 110

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
