[tool.poetry]
name = "kot"
version = "3.1.0"
description = ""
authors = ["takaiyuk"]

[tool.poetry.dependencies]
python = "~3.10"
beautifulsoup4 = "4.11.1"
click = "8.1.3"
selenium = "4.3.0"
requests = "2.31.0"
typer = "0.4.1"
webdriver-manager = "3.7.0"
PyYAML = "6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
invoke = "^2.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pydeps = "^1.12.1"
pyproject-flake8 = "^6.0.0.post1"
pytest = "^7.3.0"
pytest-mock = "^3.10.0"

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.isort]
include_trailing_comma = true
line_length = 110
multi_line_output = 3
known_first_party = ["kot"]

[tool.flake8]
max-line-length = 110
ignore = "E501,W503"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests",]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
